[package]
name = "dump-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pcap-file = "2.0.0"
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-ipv4", "medium-ethernet", "socket-raw"] }
