[package]
name = "analyser-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2.0"
cairo-rs = "0.17.0"
futures = "0.3.30"
gio = "0.17.0"
gtk = "0.17.0"
notify-debouncer-full = "0.3.1"

# Rev makes it work with plotters-cairo below
plotters = { git = "https://github.com/plotters-rs/plotters.git", default-features = false, features = [
    "line_series",
    "full_palette",
] }

# Cairo 0.17 upgrade
plotters-cairo = { git = "https://github.com/plotters-rs/plotters-cairo.git", rev = "515ab36f59ff28f1c0db7d98b410d51a7bbf9677" }

[dev-dependencies]
cairo-rs = "0.17.0"
