[package]
name = "analyser-gui"
version = "0.1.0"
edition = "2021"
default-run = "egui"

[dependencies]
async-channel = "2.2.0"
futures = "0.3.30"
notify-debouncer-full = "0.3.1"
dump-analyser = { path = "../analyser" }
egui = { version = "0.26.2", features = ["rayon"] }
egui_plot = "0.26.2"
egui_extras = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "x11",
    "wgpu",
] }
env_logger = "0.11.2"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
hdrhistogram = { version = "7.5.4", default-features = false }
statrs = { version = "0.16.0", default-features = false }

# cairo-rs = "0.17.0"
# gio = "0.17.0"
# gtk = "0.17.0"
# # Rev makes it work with plotters-cairo below
# plotters = { git = "https://github.com/plotters-rs/plotters.git", default-features = false, features = [
#     "line_series",
#     "full_palette",
# ] }
# # Cairo 0.17 upgrade
# plotters-cairo = { git = "https://github.com/plotters-rs/plotters-cairo.git", rev = "515ab36f59ff28f1c0db7d98b410d51a7bbf9677" }
