[package]
name = "dump-analyser"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.10.0"
ethercrab = { path = "../../ethercrab", default-features = false, features = [
    "std",
] }
log = "0.4.20"
nom = { version = "7.1.3", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
pcap-file = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-ipv4",
    "medium-ethernet",
    "socket-raw",
] }
