[package]
name = "concurrent-lrw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethercrab = { git = "https://github.com/ethercrab-rs/ethercrab.git", rev = "56747874383ecec17047f5c8e44f22ffd9cd0a13", version = "0.2.1" }
smol = "1.3.0"
thread-priority = "0.13.1"
